--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,10 @@ dependencies:
   equatable: ^2.0.0
   animated_text_kit: ^4.2.1
 
-  video_player:
-    git:
-      url: https://github.com/epifanov-lab/plugins.git
-      path: packages/video_player/video_player
+  ##video_player:
+  ##  git:
+  ##    url: https://github.com/epifanov-lab/plugins.git
+  ##    path: packages/video_player/video_player
 
   flutter:
     sdk: flutter
